--- a/app/scss/component/main-banner.scss
+++ b/app/scss/component/main-banner.scss
@@ -16,7 +16,7 @@
         margin-right: -10rem;
         @media (min-width: 375px) {
           margin-bottom: -3rem;
-          margin-right: -5rem;
+          margin-right: -9rem;
         }
         @media (min-width: 768px) {
           display: flex;
@@ -31,7 +31,7 @@
         margin-bottom: 1rem;
         transform: rotate(-3deg);
         @media (min-width: 375px) {
-          margin-left: 5rem;
+          // margin-left: 5rem;
           margin-bottom: 2rem;
         }
         @media (min-width: 768px) {
@@ -70,6 +70,7 @@
         }
       }
       .banner-menu-wrapper {
+        z-index: 2;
         .quote-1 {
           position: absolute;
           top: calculateRem(25px);
