--- a/app/scss/util/default.scss
+++ b/app/scss/util/default.scss
@@ -134,3 +134,8 @@ body {
         max-width: none;
     }
 }
+
+// Jquery Modal
+.blocker {
+    z-index: 999;
+}
